--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <header>
    	<div class="row">
 
-   		<div class="top-bar">
+   		<div class="top-bar-left">
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
@@ -54,7 +54,6 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
-						<li><a href="styles.html" title="">Style Demo</a></li>
 					</ul>
 				</nav>
    		</div> <!-- /top-bar -->
